[package]
name = "snake"
description = "Simple snake on SFML"
version = "0.1.0"
edition = "2021"
authors = ["Blinc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.16.0"
rand = "0.8.5"
clap = {version = "3.2.12", features = ["derive"]}